--- a/locale/cs_CZ/common.xml
+++ b/locale/cs_CZ/common.xml
@@ -269,4 +269,48 @@
 	<message key="search.titleIndex">Procházet index názvů</message>
 	<message key="search.title">Název</message>
 	<message key="search.typeMethodApproach">Typ (metoda/přístup)</message>
+	<message key="common.re">Re:</message>
+	<message key="common.manage">Spravovat</message>
+	<message key="common.noComments">Bez komentářů</message>
+	<message key="form.startsWith">začíná (čím)</message>
+	<message key="notification.confirmSuccess">Byl jste úspěšně přihlášen.</message>
+	<message key="notification.location">Přejít na URL</message>
+	<message key="notification.mailList.emailInvalid">Vložte prosím platnou emailovou adresu.</message>
+	<message key="notification.mailList.privacyProtection">Pravidla ochrany soukromí</message>
+	<message key="notification.notification">Oznámení</message>
+	<message key="notification.notifications">Oznámení</message>
+	<message key="notification.notificationsNew">({$numNew} nových)</message>
+	<message key="notification.settings">Nastavení oznámení</message>
+	<message key="notification.subscribe">Přihlásit</message>
+	<message key="notification.subscribeError">Vaše emailová adresa již je přihlášena k odběru oznámení.</message>
+	<message key="notification.reminderSent">Vaše nové heslo bylo odesláno na poskytnutou emailovou adresu.</message>
+	<message key="notification.unsubscribe">Odhlásit</message>
+	<message key="notification.unsubscribeSuccess">Byl jste úspěšně odhlášen.</message>
+	<message key="common.ccLicense"><![CDATA[<br /><br />
+		<a target="_new" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+			<img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png"/>
+		</a>
+		<br/>
+		Tato práce je licencována pod <a rel="license" target="_new" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0  Licencí</a>.]]></message>
+	<message key="common.ccLicense.rt"><![CDATA[<div class="rtBlock">
+		<br />
+		<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_new"><img alt="Creative Commons Licence" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
+		<br />
+		Tato práce je licencována pod <a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_new">Creative Commons Attribution 3.0 Licencí</a>.
+	</div>]]></message>
+	<message key="notification.allow">Povolit, aby se tyto typy oznámení zobrazovaly v mojem dodavači oznámení.</message>
+	<message key="notification.confirmError">Vyskytla se chyba při potvrzování vašeho přihlášení.</message>
+	<message key="notification.email">Posílejte mi email s těmito typy oznámení.</message>
+	<message key="notification.mailList">Zasílací seznam oznámení</message>
+	<message key="notification.mailList.protectedContent"><![CDATA[<a href="{$subscribeUrl}">Přihlásit se</a> ke chráněnému obsahu.]]></message>
+	<message key="notification.mailList.submit"><![CDATA[<a href="{$submitUrl}">Odeslat</a> článek]]></message>
+	<message key="notification.mailList.register">Můžete se na těchto stránkách zaregistrovat, abyste...</message>
+	<message key="notification.mailList.review"><![CDATA[Participoval na <a href="{$reviewUrl}">recenzním</a> řízení]]></message>
+	<message key="notification.noneExist">Aktuálně nemáte žádná oznámení.</message>
+	<message key="notification.notificationsDescription"><![CDATA[Máte {$unreadCount} nepřečtených oznámení a {$readCount} přečtených oznámení.  <a href="{$settingsUrl}">Klikněte zde</a>, abyste upravili nastavení vašich oznámení.]]></message>
+	<message key="notification.settingsDescription">Zvolte systémové události, o kterých chcete být informován. Zrušení zaškrtnutí u položky zabrání tomu, aby se oznámení události zobrazovalo ve vašem dodavači oznámení.</message>
+	<message key="notification.subscribeSuccess">Na uvedenou adresu byl zaslán email. Abyste byl přidán na rozesílací seznam, klikněte prosím na potvrzovací odkaz v tomto emailu.</message>
+	<message key="notification.reminderError">Při zasílání hesla se vyskytla chyba. Ujistěte se prosím, že jste uvedl emailovou adresu správně.</message>
+	<message key="notification.unsubscribeDescription">Pro odhlášení z odběru emailových oznámení vložte níže Vaši emailovou adresu a heslo. Pokud si nepamatujete své heslo, nechejte políčko pro heslo prázdné a na uvedenou emailovou adresu Vám bude odesláno nové.</message>
+	<message key="notification.unsubscribeError">Při odhlašování se vyskytla chyba. Ujistěte se prosím, že Vaše emailová adresa a heslo jsou správné.</message>
 </locale>
