--- a/locale/de_DE/reader.xml
+++ b/locale/de_DE/reader.xml
@@ -19,7 +19,7 @@
 	<message key="comments.confirmDeleteChildren">Mit diesem Kommentar löschen Sie auch alle Antworten. Sind Sie sicher, dass Sie ihn löschen wollen?</message>
 	<message key="comments.delete">Diesen Kommentar löschen</message>
 	<message key="comments.email">E-Mail-Adresse</message>
-	<message key="comments.emailReply">Antworten Sie per E-Mail.</message>
+	<message key="comments.emailReply">Antworten Sie per E-Mail</message>
 	<message key="comments.enterComment">Kommentar eingeben</message>
 	<message key="comments.inResponseTo">Antwort auf <![CDATA[<a href="]]>{$url}<![CDATA[">]]>{$title}<![CDATA[</a>]]></message>
 	<message key="comments.name">Name</message>
@@ -157,4 +157,11 @@
 	<message key="rt.version.title">Titel</message>
 	<message key="rt.version">Version</message>
 	<message key="rt.viewMetadata">Metadaten indizieren</message>
+	<message key="rt.admin.sharing.languageLabel">Sprache</message>
+	<message key="comments.titleRequired">Ein Kommentar-Titel ist erforderlich.</message>
+	<message key="rt.admin.sharing.basic">Grundeinstellungen</message>
+	<message key="rt.admin.sharing.userNameLabel">AddThis.com-Benutzer/innenname</message>
+	<message key="rt.admin.sharing.advanced">Erweiterte Einstellungen (optional)</message>
+	<message key="rt.admin.sharing.customizationLink"><![CDATA[Siehe die <a href="http://www.addthis.com/help/customize/custom-button/">Dokumentation zur AddThis.coma-Anpassung</a> für Hinweise.]]></message>
+	<message key="rt.admin.configureSharing">AddThis konfigurieren</message>
 </locale>
