--- a/locale/fa_IR/installer.xml
+++ b/locale/fa_IR/installer.xml
@@ -68,4 +68,7 @@
 	<message key="installer.releaseNotes">یاداشت های منتشره</message>
 	<message key="installer.securitySettings">تنظیمات امنیتی</message>
 	<message key="installer.skipFilesDir">زیر پوشه های لازم را ایجاد نکن. این گزینه فقط هنگام نصب  دستی بدرد میخورد.</message>
+	<message key="installer.installationWrongPhp"><![CDATA[<br/><strong>هشدار: نسخه PHP شما فاقد خداقل های مورد نیاز برای نصب برنامه است. توصیه میشود به نسخه های جدید ارتفا دهید.</strong>]]></message>
+	<message key="installer.installParseEmailTemplatesFileError"><![CDATA[بروز خطا هنگام پردازش فایل تمپلیت ایمیل <tt>{$file}</tt>.]]></message>
+	<message key="installer.locale.maybeIncomplete">زبانهای مشخص شده ممکن است ناکامل باشند.</message>
 </locale>
