--- a/locale/cs_CZ/submission.xml
+++ b/locale/cs_CZ/submission.xml
@@ -148,7 +148,7 @@
 	<message key="submissions.queuedEditing">Ve frontě k editování</message>
 	<message key="submissions.queued">Ve frontě</message>
 	<message key="submissions.queuedUnassigned">Čeká na přidělení</message>
-	<message key="submissions.ruling">Pravidla</message>
+	<message key="submissions.ruling">Rozhodnuto</message>
 	<message key="submissions.submit">Odeslat</message>
 	<message key="submissions.submitted">Odeslané</message>
 	<message key="submission.start">Zahájit</message>
