--- a/locale/de_DE/common.xml
+++ b/locale/de_DE/common.xml
@@ -300,4 +300,17 @@
 	<message key="notification.unsubscribeDescription">Geben Sie bitte Ihre E-Mail-Adresse und Ihr Passwort ein, um keine weiteren Mail-Benachrichtigungen zu erhalten. Wenn Sie sich nicht an Ihr Passwort erinnern, lassen Sie das Feld bitte frei; es wird dann ein neues Passwort an die angegebene Mail-Adresse geschickt.</message>
 	<message key="notification.unsubscribeError">Beim Versuch, Sie auzutragen, ist ein Fehler aufgetreten. Bitte stellen Sie sicher, dass sie die richtige E-Mail-Adresse und das richtige Passwort verwenden.</message>
 	<message key="notification.unsubscribeSuccess">Sie wurden erfolgreich ausgetragen.</message>
+	<message key="common.manage">Verwalten</message>
+	<message key="common.ccLicense"><![CDATA[<br /><br />
+		<a target="_new" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+			<img alt="Creative-Commons-Lizenz" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png"/>
+		</a>
+		<br/>
+		Diese Arbeit steht unter einer <a rel="license" target="_new" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 License</a>.]]></message>
+	<message key="common.ccLicense.rt"><![CDATA[<div class="rtBlock">
+		<br />
+		<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_new"><img alt="Creative-Commons-Lizenz" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
+		<br />
+		Diese Arbeit steht unter einer <a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_new">Creative Commons Attribution 3.0 License</a>.
+	</div>]]></message>
 </locale>
