--- a/locale/el_GR/common.xml
+++ b/locale/el_GR/common.xml
@@ -269,4 +269,48 @@
 	<message key="search.titleIndex">Σάρωση κατά τίτλο άρθρου</message>
 	<message key="search.title">Τίτλος</message>
 	<message key="search.typeMethodApproach">Τύπος (μέθοδος/προσέγγιση)</message>
+	<message key="common.ccLicense"><![CDATA[<br /><br />
+		<a target="_new" rel="license" href="http://creativecommons.org/licenses/by/3.0/">
+			<img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png"/>
+		</a>
+		<br/>
+		Η χρήση του περιεχομένου καθορίζεται από την άδεια <a rel="license" target="_new" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0  License</a>.]]></message>
+	<message key="common.ccLicense.rt"><![CDATA[<div class="rtBlock">
+		<br />
+		<a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_new"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by/3.0/80x15.png" /></a>
+		<br />
+		Η χρήση του περιεχομένου καθορίζεται από την άδεια <a rel="license" href="http://creativecommons.org/licenses/by/3.0/" target="_new">Creative Commons Attribution 3.0 License</a>.
+	</div>]]></message>
+	<message key="common.manage">Διαχείριση</message>
+	<message key="common.noComments">Κανένα Σχόλιο</message>
+	<message key="form.startsWith">αρχίζει από</message>
+	<message key="notification.allow">Εμφάνιση αυτών των τύπων ειδοποιήσεων στην προσωπική μου ροή ειδοποιήσεων</message>
+	<message key="notification.confirmError">Παρουσίαστηκε ένα σφάλμα κατά την επιβεβαίωση της συνδρομής σας.</message>
+	<message key="notification.confirmSuccess">Η συνδρομή σας δημιουργήθηκε επιτυχώς.</message>
+	<message key="notification.email">Στείλτε μου ένα email για αυτού του είδους τις ειδοποιήσεις.</message>
+	<message key="notification.location">Πηγαίνετε στο URL</message>
+	<message key="notification.mailList">Λίστα ειδοποιήσεων</message>
+	<message key="notification.mailList.emailInvalid">Σας παρακαλούμε εισάγετε μια έγκυρη διεύθυνση ηλεκτρονικού ταχυδρομείου.</message>
+	<message key="notification.mailList.privacyProtection">Πολιτική προστασίας ιδιωτικότητας</message>
+	<message key="notification.mailList.protectedContent"><![CDATA[<a href="{$subscribeUrl}">Συνδρομή</a> σε προστατευόμενο περιεχόμενο.]]></message>
+	<message key="notification.mailList.submit"><![CDATA[<a href="{$submitUrl}">Υποβάλλετε</a> ένα άρθρο]]></message>
+	<message key="notification.mailList.register">Μπορείτε να εγγραφείτε σε αυτόν τον ιστότοπο για...</message>
+	<message key="notification.mailList.review"><![CDATA[Λάβετε μέρος στην διαδικασία <a href="{$reviewUrl}">αξιολόγησης</a>]]></message>
+	<message key="notification.noneExist">Δεν έχετε καμία ειδοποίηση</message>
+	<message key="notification.notification">Ειδοποίηση</message>
+	<message key="notification.notifications">Ειδοποιήσεις</message>
+	<message key="notification.notificationsNew">({$numNew} νέα)</message>
+	<message key="notification.notificationsDescription"><![CDATA[Έχετε {$unreadCount} μη αναγνωσμένες ειδοποιήσεις και {$readCount} αναγνωσμένες ειδοποιήσεις .  <a href="{$settingsUrl}">Πατήσετε εδώ</a> για να αλλάξετε τις ρυθμίσεις των ειδοποιήσεών σας.]]></message>
+	<message key="notification.settings">Ρυθμίσεις Ειδοποιήσεων</message>
+	<message key="notification.settingsDescription">Επιλέξτε τα γεγονότα του συστήματος για τα οποία επιθυμείτε να ειδοποιήστε. Απο-επιλέγοντας ένα γεγονός δεν θα λαμβάνετε ειδοποιήσεις για αυτό στην προσωπική σας ροή ειδοποιήσεων.</message>
+	<message key="notification.subscribe">Συνδρομή</message>
+	<message key="notification.subscribeError">Η διευθύνσή σας έχει ήδη συνδρομή στις ειδοποιήσεις</message>
+	<message key="notification.subscribeSuccess">Ένα μήνυμα έχει σταλεί στην διεύθυνση που εισάγατε. Σας παρακαλούμε πατήστε στον σύνδεσμο επιβεβαίωσης στο μήνυμα ώστε να προσθέσετε τον εαυτόν σας στη λίστα ειδοποιήσεων.</message>
+	<message key="notification.reminderError">Παρουσίαστηκε ένα σφάλμα κατά την αποστολή του κωδικού πρόσβασης. Παρακαλούμε επιβεβαιωθείτε ότι εισάγατε σωστά την διεύθυνσή σας.</message>
+	<message key="notification.reminderSent">Ο καινούργιος σας κωδικός πρόσβασης έχει σταλεί στην διεύθυνση που εισάγατε.</message>
+	<message key="notification.unsubscribe">Διαγραφή από τη λίστα</message>
+	<message key="notification.unsubscribeDescription">Εισάγετε την διεύθυνση του ηλεκτρονικού σας ταχυδρομείο και τον κωδικό πρόσβασης παρακάτω για να διαγραφείτε από την λίστα των ειδοποιήσεων. Αν δεν θυμάστε τον κωδικό σας, αφήστε το σχετικό πεδίο κενό και ένας κανούργιος κωδικός θα σας αποσταλεί στο email σας.</message>
+	<message key="notification.unsubscribeError">Παρουσιάστηκε ένα σφάλμα κατά την διαγραφή σας από τη λίστα. Παρακαλούμε επιβεβαιωθείτε ότι η διεύθυση και ο κωδικός που εισάγατε είναι σωστά.</message>
+	<message key="notification.unsubscribeSuccess">Διαγραφήκατε με επιτυχία.</message>
+	<message key="common.re">Re:</message>
 </locale>
