--- a/locale/el_GR/reader.xml
+++ b/locale/el_GR/reader.xml
@@ -157,4 +157,21 @@
 	<message key="rt.version.title">Τίτλος</message>
 	<message key="rt.version">Έκδοση</message>
 	<message key="rt.viewMetadata">Ευρετηρίαση μεταδεδομένων</message>
+	<message key="comments.titleRequired">Απαιτείται ένα τίτλος σχολίου.</message>
+	<message key="rt.admin.sharing">Διαμοιρασμός (Sharing)</message>
+	<message key="rt.admin.sharing.enabled">Ενεργοποίηση Διαμοιρασμού</message>
+	<message key="rt.admin.sharing.description"><![CDATA[Για την ενεργοποίηση της δυνατότητας των αναγνωστών σας να μοιράζονται άρθρα περιοδικών, δημιουργήστε έναν λογαριασμό στο <a href="http://addthis.com">addthis.com</a>, και Αντιγράψτε και Επικολλήστε τον κώδικο του κουμπιού Διαμοιρασμού παρακάτω.]]></message>
+	<message key="rt.admin.sharing.basic">Βασικές Ρυθμίσες</message>
+	<message key="rt.admin.sharing.userNameLabel">AddThis.com όνομα χρήστη</message>
+	<message key="rt.admin.sharing.buttonStyleLabel">Στύλ κουμπιού</message>
+	<message key="rt.admin.sharing.dropDownMenuLabel">Χρήση drop-down μενού</message>
+	<message key="rt.admin.sharing.advanced">Προωθημένες Ρυθμίσεις (προαιρετικά)</message>
+	<message key="rt.admin.sharing.customizationLink"><![CDATA[Δείτε <a href="http://www.addthis.com/help/customize/custom-button/">AddThis.com customization documentation</a> για τεκμηρίωση.]]></message>
+	<message key="rt.admin.sharing.brandLabel">Brand</message>
+	<message key="rt.admin.sharing.dropDownLabel"><![CDATA[Επιλογές Drop-down μενού <br /> (comma separated list)]]></message>
+	<message key="rt.admin.sharing.languageLabel">Γλώσσα</message>
+	<message key="rt.admin.sharing.logolabel">Λογότυπο</message>
+	<message key="rt.admin.sharing.logoBackgroundLabel">Φόντο λογοτύπου</message>
+	<message key="rt.admin.sharing.logoColorLabel">Χρώμα λογοτύπου</message>
+	<message key="rt.admin.configureSharing">Ρύθμιση AddThis</message>
 </locale>
