--- a/locale/nl_NL/installer.xml
+++ b/locale/nl_NL/installer.xml
@@ -69,4 +69,6 @@
 	<message key="installer.releaseNotes">Over deze versie</message>
 	<message key="installer.securitySettings">Security instellingen</message>
 	<message key="installer.skipFilesDir">De benodigde submappen niet aanmaken (alleen nuttig voor handmatige installatie)</message>
+	<message key="installer.installParseEmailTemplatesFileError"><![CDATA[Fout bij het parsen van het e-mail sjabloon <tt>{$file}</tt>.]]></message>
+	<message key="installer.locale.maybeIncomplete">De gemarkeerde talen zijn mogelijk incompleet</message>
 </locale>
